--- a/web/css/stylesheet.css
+++ b/web/css/stylesheet.css
@@ -26,7 +26,10 @@ background: #333; line-height: 30px; width: 140px; text-align: center;}
 /* 헤더 */
 .header {}
 .header .header-menu {text-align: right;}
-.header .header-menu a {color: #fff; padding: 10px 0px 10px 13px; display: inline-block;}
+.header .header-menu a {color: #fff; padding: 10px 5px 10px 13px; display: inline-block;}
 .header .header-menu a:hover {color: #666;}
-.header .header-title {}
+.header .header-title {text-align: center;}
+.header .header-title h1 {background-color: #4aa8d4; font-size: 28px; padding: 8px 20px 6px 20px; display: inline-block; color: #fff; margin-top: 40px;
+font-weight: normal; text-transform: uppercase;}
+.header .header-title a {display: inline-block; background-color: #2698cb; font-size: 18px; color: #fff; padding: 5px 20px 6px 20px; margin-top: -5px;}
 .header .header-icon {}
