--- a/web/css/stylesheet.css
+++ b/web/css/stylesheet.css
@@ -28,8 +28,19 @@ background: #333; line-height: 30px; width: 140px; text-align: center;}
 .header .header-menu {text-align: right;}
 .header .header-menu a {color: #fff; padding: 10px 5px 10px 13px; display: inline-block;}
 .header .header-menu a:hover {color: #666;}
+
 .header .header-title {text-align: center;}
 .header .header-title h1 {background-color: #4aa8d4; font-size: 28px; padding: 8px 20px 6px 20px; display: inline-block; color: #fff; margin-top: 40px;
 font-weight: normal; text-transform: uppercase;}
 .header .header-title a {display: inline-block; background-color: #2698cb; font-size: 18px; color: #fff; padding: 5px 20px 6px 20px; margin-top: -5px;}
-.header .header-icon {}
+
+.header .header-icon {text-align: center; margin-top: 10px;}
+.header .header-icon a {width: 60px; height: 60px; display: inline-block; background: url(../img/icon.png); margin: 0 3px;}
+.header .header-icon a.icon1 {background-position: 0 0;}
+.header .header-icon a.icon2 {background-position: 0 -60px;}
+.header .header-icon a.icon3 {background-position: 0 -120px;}
+.header .header-icon a.icon4 {background-position: 0 -180px;}
+.header .header-icon a.icon1:hover {background-position: -60px 0;}
+.header .header-icon a.icon2:hover {background-position: -60px -60px;}
+.header .header-icon a.icon3:hover {background-position: -60px -120px;}
+.header .header-icon a.icon4:hover {background-position: -60px -180px;}
