--- a/web/css/reset.css
+++ b/web/css/reset.css
@@ -14,6 +14,12 @@ body, input, textarea, select, button, table {
     color: #222; font-size: 13px; line-height: 1.5;
 }
 
+/* 불릿 기호 초기화 */
+dl, ul, li, ol, menu {list-style: none;}
+
+/* 제목 태그 초기화 */
+h1, h2, h3, h4, h5, h6 {font-size: 13px; color: #222; font-weight: normal;}
+
 /* IR 효과 */
 /* 의미있는 이미지의 대체 텍스트 제공 */
 .ir_pm {display: block; overflow: hidden; font-size: 0; line-height: 0; text-indent: -9999px;}
