--- a/web/css/stylesheet.css
+++ b/web/css/stylesheet.css
@@ -10,13 +10,13 @@ background: #333; line-height: 30px; width: 140px; text-align: center;}
 /* 레이아웃 */
 #wrap {}
 #header {height: 325px; background: url(../img/header_bg.jpg) center top repeat-x;}
-#contents {height: 800px; background-color: #222;}
+#contents {}
 #footer {height: 200px; background-color: #333;}
 
 
 /* 컨텐츠 레이아웃 */
-#cont_nav {height: 200px; background-color: #333;}
-#cont_title {height: 200px; background-color: #444;}
+#cont_nav {background-color: #f6fdff;}
+#cont_title {background-color: #eaf7fd;}
 #cont_banner {height: 200px; background-color: #555;}
 #cont_content {height: 200px; background-color: #666;}
 
@@ -24,7 +24,6 @@ background: #333; line-height: 30px; width: 140px; text-align: center;}
 .container {width: 990px; margin: 0 auto; height: inherit; background-color: rgba(255, 255, 255, 0.3);}
 
 /* 헤더 */
-.header {}
 .header .header-menu {text-align: right;}
 .header .header-menu a {color: #fff; padding: 10px 5px 10px 13px; display: inline-block;}
 .header .header-menu a:hover {color: #666;}
@@ -44,3 +43,20 @@ font-weight: normal; text-transform: uppercase;}
 .header .header-icon a.icon2:hover {background-position: -60px -60px;}
 .header .header-icon a.icon3:hover {background-position: -60px -120px;}
 .header .header-icon a.icon4:hover {background-position: -60px -180px;}
+
+/* 전체 메뉴 */
+.nav {overflow: hidden; padding: 30px 0;}
+.nav > div {float: left; width: 40%;}
+.nav > div:last-child {width: 20%;} /* i9 부터 사용 가능 */
+.nav > div h3 {font-size: 18px; color: #25a2d0; margin-bottom: 4px;}
+.nav > div ol {overflow: hidden;}
+.nav > div ol li {float: left; width: 50%;}
+.nav > div.last ol li {width: 100%;}
+.nav > div ol li a:hover {text-decoration: underline;}
+
+/* 타이틀 */
+.title {position: relative;}
+.title h2 {font-size: 40px; text-align: center; padding: 5px 0; letter-spacing: 2px; color: #2c94c4; 
+font-family: 'Nanum Brush Script', cursive;}
+.title .btn {position: absolute; top: 5px; right: 0; width: 60px; height: 60px; 
+background: url(../img/icon.png) no-repeat 0 -600px;}
