--- a/web/css/stylesheet.css
+++ b/web/css/stylesheet.css
@@ -17,7 +17,7 @@ background: #333; line-height: 30px; width: 140px; text-align: center;}
 /* 컨텐츠 레이아웃 */
 #cont_nav {background-color: #f6fdff;}
 #cont_title {background-color: #eaf7fd;}
-#cont_banner {height: 200px; background-color: #555;}
+#cont_banner {background-color: #dceff7;}
 #cont_content {height: 200px; background-color: #666;}
 
 /* 컨테이너 */
@@ -60,3 +60,19 @@ font-weight: normal; text-transform: uppercase;}
 font-family: 'Nanum Brush Script', cursive;}
 .title .btn {position: absolute; top: 5px; right: 0; width: 60px; height: 60px; 
 background: url(../img/icon.png) no-repeat 0 -600px;}
+
+/* 배너 */
+.ban  {position: relative; padding: 24px 0 20px;}
+.ban a.prev {position: absolute; left: -60px; top: 60px; width: 43px; height: 43px; background: url(../img/icon.png) no-repeat -150px 0;}
+.ban a.next {position: absolute; right: -60px; top: 60px; width: 43px; height: 43px; background: url(../img/icon.png)  no-repeat -150px -43px;}
+.ban a.prev:hover {background-position: -193px 0;}
+.ban a.next:hover {background-position: -193px -43px;}
+.ban ul {overflow: hidden;}
+.ban ul li {float: left; width: 330px;}
+.ban ul li:last-child {text-align: right;}
+.ban ul li:nth-child(2) {text-align: center;}
+.ban ul li.ban_img1 {text-align: left;}
+.ban ul li.ban_img2 {text-align: center;}
+.ban ul li.ban_img3 {text-align: right;}
+.ban ul li img {border: 4px solid #dcdcdc;}
+.ban ul li img:hover {border-color: #98bcdc;}
