--- a/web/css/stylesheet.css
+++ b/web/css/stylesheet.css
@@ -152,3 +152,15 @@ background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
 .notice_hover2 li a span em {visibility: hidden; position: absolute; left: 0; bottom: 0; width: 100%; background: rgba(0,0,0,0.7); color: #fff;}
 .notice_hover2 li a span:hover em {visibility: visible;}
 .notice_hover2 li a strong {padding-top: 3px; display: inline-block; font-size: 12px;}
+
+/* tab menu */
+.tab_menu {position: relative; border: 1px solid #ccc; padding: 8px;height: 105px;}
+.tab_menu ul {overflow: hidden; border-bottom: 1px solid #ccc;}
+.tab_menu ul li {float: left; border: 1px solid #ccc; margin-right: -1px; margin-bottom: -1px;}
+.tab_menu ul li a {padding: 5px 10px; display: block;}
+.tab_menu ul li ul {position: absolute; left: 0; top: 48px; width: 270px; border: 0;}
+.tab_menu ul li ul li {float: none; border: 0; background: url(../img/dot.gif) no-repeat 9px 8px; padding-left: 18px;}
+.tab_menu ul li ul li a {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%; padding: 0 0 3px 0;}
+.tab_menu ul li.active {background: #2c94c4;}
+.tab_menu ul li.active a {color: #fff;}
+.tab_menu ul li.active ul li a {color: #333;}
